# rusty

./: Cargo.toml
.github/workflows/: deploy.yml
scripts/: build-wasm.sh
src/: entity.rs  helpers.rs  main.rs  map.rs  particle.rs  player.rs  scene.rs  sound.rs  tilemap.rs  trait.rs
src/assets/: tileset.json
src/assets/tiles/: renamer.py  tilebaker.py  tilemapforatlas.py  tilesplitter.py
src/entity/behaviour/: index.json
src/entity/enemy/: virabird.yaml  virat.yaml
src/entity/friend/: chopbot.yaml
src/particle/: dash.yaml
src/sound/: footstep.yaml
web/: game.js  game_bg.wasm  gl.js  index.html  rustycropbot.wasm
web/assets/: tileset.json
web/assets/entity/enemy/: virabird.yaml  virat.yaml
web/assets/entity/friend/: chopbot.yaml
web/assets/particle/: dash.yaml  trail.yaml
web/assets/sound/: hurt2.yaml
web/assets/structure/: bush_plains.json  tree_plains.json
web/entity/friend/: index.json
web/particle/: dash.yaml
web/sound/: hurt.yaml
